--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
 
     <h1> I'm Peter,</h1>
-    <h2>a programmer,</h2>
+    <h2>a programmer</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
     <img src="images/mountain.png" alt="mountain-image">
 
@@ -21,30 +21,30 @@
   <div class="middle-container">
     <div class="profile">
       <img class="me-pic" src="Busienei_Peter_92.jpg" alt="profile-pic">
-      <h2>Hello.</h2>
+      <h2>Hello</h2>
       <p class="my-bio">I am a Web Developer and an Exceptional Educator, teaching Math and tutoring students after school.</p>
     </div>
     <hr>
     <div class="skills">
-      <h2>My Skills.</h2>
+      <h2>My Skills</h2>
       <div class="skill-row">
         <img class="world-img" src="https://image.flaticon.com/icons/svg/1256/1256630.svg" alt="">
         <h3>Design & Development</h3>
-        <p>I am a Web Developer with a passion for web application development and success in managing development projects. Skilled in conceptualizing, designing, development, and deploying software containing
-          logical and mathematical solutions to business problems. Dedicated to driving innovation with the ability to follow industry and technological trends, and facilitating early adoption of innovations..</p>
+        <p>I am a Web Developer with a passion for web application development managing development projects. Skilled in conceptualizing, designing, development, and deploying software containing
+          logical and mathematical solutions to common problems. Dedicated to driving innovation with the ability to follow industry and technological trends, and facilitating early adoption of innovations.</p>
       </div>
       <div class="skill-row">
         <img class="pc-img" src="computer.png" alt="sample-pic">
         <h3 class="prof-sum">Professional Summary</h3>
-        <p>I’m a newbie at Web Developer specializing in front-end who’s skilled in ASP.NET, Javascript, C++, HTML, CSS, Python, React & MySQL.
+        <p>I’m a newbie Web Developer specializing in front-end. I am skilled in ASP.NET, Javascript, C++, HTML, CSS, Python, React & MySQL.
           </p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>if you love 5k or 10k as I do.</h3>
-      <p class="contact-message">When you learn to challenge yourself in life no matter what. You will learn to have the basic skills of running with discomfort that will help you attain endurance hence, running longer distance. </p>
+      <h3>if you love 5k or 10k as I do</h3>
+      <p class="contact-message">When you learn to challenge yourself beyond limits. You will learn basic skills of running with persistance  that will help you attain endurance.</p>
       <a class="butn" href="mailto:pbusienei@hotmail.com">CONTACT ME</a>
     </div>
   </div>
