--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <div class="skill-row">
         <img class="world-img" src="https://image.flaticon.com/icons/svg/1256/1256630.svg" alt="">
         <h3>Design & Development</h3>
-        <p>I am a Web Developer with a passion for web application development managing development projects. Skilled in conceptualizing, designing, development, and deploying software containing
-          logical and mathematical solutions to common problems. Dedicated to driving innovation with the ability to follow industry and technological trends, and facilitating early adoption of innovations.</p>
+        <p>I am a Web Developer with a passion for web application development and managing development projects. I am skilled in conceptualizing, designing, development, and deploying software containing
+          logical and mathematical solutions to problems. I am dedicated to driving innovation with the ability to follow industry and technological trends, and facilitating early adoption of innovations.</p>
       </div>
       <div class="skill-row">
         <img class="pc-img" src="computer.png" alt="sample-pic">
         <h3 class="prof-sum">Professional Summary</h3>
-        <p>I’m a newbie Web Developer specializing in front-end. I am skilled in ASP.NET, Javascript, C++, HTML, CSS, Python, React & MySQL.
+        <p>I’m a Web Developer specializing in front-end and back-end. I am skilled in ASP.NET, Javascript, C++, HTML, CSS, Python, React & MySQL.
           </p>
       </div>
     </div>
@@ -44,7 +44,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>if you love 5k or 10k as I do</h3>
-      <p class="contact-message">When you learn to challenge yourself beyond limits. You will learn basic skills of running with persistance  that will help you attain endurance.</p>
+      <p class="contact-message">When you learn to challenge yourself beyond limits you will learn basic skills of running with persistance  that will help you attain endurance.</p>
       <a class="butn" href="mailto:pbusienei@hotmail.com">CONTACT ME</a>
     </div>
   </div>
