--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>if you love 5k or 10k as I do</h3>
-      <p class="contact-message">When you learn to challenge yourself beyond limits you will learn basic skills of running with persistance  that will help you attain endurance.</p>
+      <p class="contact-message">When you learn to challenge yourself beyond limits, you will learn basic skills of running with persistance  that will help you attain endurance.</p>
       <a class="butn" href="mailto:pbusienei@hotmail.com">CONTACT ME</a>
     </div>
   </div>
